--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
-        <title> Run Buddy</title>
+        <title>RUN BUDDY</title>
         <link rel="stylesheet" href="./assets/css/style.css" />
-    </head>
+      </head>
     <body>
         <!--navigation-->
         <header>
