--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                         <a href="#what-you-do">What You Do </a>
                     </li>
                     <li>
-                        <a href="your-trainers">Your Trainers </a>
+                        <a href="#your-trainers">Your Trainers </a>
                     </li>
                     <li> 
                         <a href="#reach-out">Reach Out</a>
@@ -125,7 +125,7 @@
                     <h4>Endurance</h4>
                     <p>
                         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe culpa sed
-      itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat!
+                        itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat!
                     </p>
                 </div>
                 <img src="./assets/images/trainer-2.jpg" alt="Joanna Gill cooling off after a workout"/>
@@ -146,6 +146,30 @@
         <!--"reach out" section-->
         <section>
             <h2>Reach Out</h2>
+            <div class="contact-info">
+                <iframe src= "https://www.google.com/maps/embed?pb=!1m26!1m12!1m3!1d3231.227178331127!2d-78.96426163473471!3d35.916938980139996!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m11!3e6!4m3!3m2!1d35.915959!2d-78.9627617!4m5!1s0x89ace89a326d077b%3A0xec66516621610d42!2sSmoothie%20King%2C%201125%20NC-54%20%23806%2C%20Durham%2C%20NC%2027707!3m2!1d35.9179258!2d-78.9609923!5e0!3m2!1sen!2sus!4v1633555878142!5m2!1sen!2sus"
+                 width="400" 
+                 height="400"
+                 style="border:0;" 
+                 allowfullscreen="" 
+                 loading="lazy">
+                </iframe>
+            </div>
+            <div>
+                <h3>Run Buddy</h3>
+                <p>
+                    Any questionsor concerns before signing up?
+                    <br />
+                    Let us know and we'll be happy to talk to you!
+                </p>
+                <address>
+                    55 Main Street <br/>
+                    Some Town, Ca <br/>
+                    12345 <br/>
+                    P: 555.RUN.BUDZ (555.786.2839) <br/>
+                    E: <a href="mailto:info@runbuddy.io">info@runbuddy.io</a>
+                </address>
+            </div>
         </section>
 
         <!--footer-->
