--- a/index.html
+++ b/index.html
@@ -146,15 +146,15 @@
         <!--"reach out" section-->
         <section id="reach-out" class="contact">
             <h2 class="section-title secondary-border">Reach Out</h2>
-            <div class="contact-info">
-                <iframe src= "https://www.google.com/maps/embed?pb=!1m26!1m12!1m3!1d3231.227178331127!2d-78.96426163473471!3d35.916938980139996!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m11!3e6!4m3!3m2!1d35.915959!2d-78.9627617!4m5!1s0x89ace89a326d077b%3A0xec66516621610d42!2sSmoothie%20King%2C%201125%20NC-54%20%23806%2C%20Durham%2C%20NC%2027707!3m2!1d35.9179258!2d-78.9609923!5e0!3m2!1sen!2sus!4v1633555878142!5m2!1sen!2sus"
-                 width="400" 
-                 height="400"
-                 style="border:0;" 
-                 allowfullscreen="" 
+            <div class = "contact-info">
+                <iframe 
+                 src= "https://www.google.com/maps/embed?pb=!1m26!1m12!1m3!1d3231.227178331127!2d-78.96426163473471!3d35.916938980139996!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m11!3e6!4m3!3m2!1d35.915959!2d-78.9627617!4m5!1s0x89ace89a326d077b%3A0xec66516621610d42!2sSmoothie%20King%2C%201125%20NC-54%20%23806%2C%20Durham%2C%20NC%2027707!3m2!1d35.9179258!2d-78.9609923!5e0!3m2!1sen!2sus!4v1633555878142!5m2!1sen!2sus"
+                 style="border:0;"
+                 allowfullscreen=""
                  loading="lazy">
                 </iframe>
-            </div>
+                <div>
+            <!--contact info-->
             <div>
                 <h3>Run Buddy</h3>
                 <p>
@@ -163,10 +163,10 @@
                     Let us know and we'll be happy to talk to you!
                 </p>
                 <address>
-                    55 Main Street <br/>
-                    Some Town, Ca <br/>
-                    12345 <br/>
-                    P: 555.RUN.BUDZ (555.786.2839) <br/>
+                    55 Main Street <br>
+                    Some Town, Ca <br>
+                    12345 <br>
+                    P: 555.RUN.BUDZ (555.786.2839) <br>
                     E: <a href="mailto:info@runbuddy.io">info@runbuddy.io</a>
                 </address>
             </div>
@@ -176,7 +176,7 @@
         <footer>
             <h2> ❤️ Made with love by Run Buddy. </h2>
             <div>
-                <a href="#">Read Our Privacy Policy</a><br />
+                <a href="./privacy-policy.html">Read Our Privacy Policy</a><br />
                 &copy; 2019 Run Buddy, Inc.
               </div>
         </footer>
